<resources>
    <string name="app_name">Iris Mobile</string>
    <string name="app_website">http://yarta.gforge.inria.fr/</string>
    <string name="service_baseNamespace">http://yarta.gforge.inria.fr/ontologies/mse.rdf#</string>
    <string name="service_baseRDF">mse-1.2.rdf</string>
    <string name="service_basePolicy">policies</string>
    <string name="dashboard_sync_title">Social Info Sync</string>
    <string name="dashboard_sync_subtitle">Connect through your favourite social network, query your social data and keep Yarta in sync with your latest online activity.</string>
    <string name="dashboard_facebook">Facebook</string>
    <string name="dashboard_twitter">Twitter</string>
    <string name="dashboard_linkedin">LinkedIn</string>
    <string name="dashboard_login">Connect</string>
    <string name="dashboard_logout">Log-out</string>
    <string name="dashboard_notloggedin">You are not logged in. Use the "Connect" button below.</string>
    <string name="dashboard_developers_notification">If you are a developer consult the menu.</string>
    <string name="dashboard_menu_about">About Yarta</string>
    <string name="dashboard_menu_console">Console</string>
    <string name="dashboard_menu_settings">Settings</string>
    <string name="dashboard_plugin_info_format">Logged as %1$s\nLast sync: %2$s</string>
    <string name="dashboard_plugin_sync_today">today</string>
    <string name="dashboard_plugin_sync_never">never</string>
    <string name="dashboard_nonet_error">Please enable your Internet connection first!</string>
    <string name="dashboard_sync_now">Sync now</string>
    <string name="dashboard_new_friend">New friend request</string>
    <string name="dashboard_friend_request_format">User %s wants to be your friend.</string>
    <string name="dashboard_accept">Accept</string>
    <string name="dashboard_sync_started">Sync task started.</string>
    <string name="dashboard_menu_feedback">Feedback</string>
    <string name="about_title">Yarta - Social Ecosystem Middleware</string>
    <string name="about_info">Yarta (Persian for "Friend") is a middleware for managing mobile social ecosystems, a term that refers to the rich social interactions seen in current mobile environments.\nLicense : LGPL</string>
    <string name="about_visit_project">Visit project website</string>
    <string name="console_title">Library console</string>
    <string name="console_info">Contains a couple of useful functionalities for developers to be used while using Yarta.</string>
    <string name="console_service_status_running">Yarta Library Service: running</string>
    <string name="console_service_status_not_running">Yarta Library Service: not running</string>
    <string name="console_service_status_info">Start/Stop the library service at any given time. Note that currently running Yarta applications might need it.</string>
    <string name="console_stop_service">Stop</string>
    <string name="console_start_service">Start</string>
    <string name="console_operation_successfull">Operation was successful.</string>
    <string name="console_operation_error">Error encountered. Please try again.</string>
    <string name="console_library_files">Internal library files</string>
    <string name="console_library_files_info">Easily copy internal ontoloy &amp; policy files to the SD card (yarta folder).</string>
    <string name="console_dump_policy">Copy policy</string>
    <string name="console_dump_ontology">Copy ontology</string>
    <string name="eula_anonimous_usage">Help us improve Yarta by sending anonymouse API usage reports.</string>
    <string name="eula_first_run_accept">ACCEPT</string>
    <string name="eula_first_run_ignore">DECLINE</string>
    <string name="settings_title">Settings panel</string>
    <string name="settings_refresh_interval">Social sync interval</string>
    <string name="settings_refresh_interval_info">Let us know when do you want Yarta to sync with your social networks</string>
    <string name="settings_sync_manual">On demand</string>
    <string name="settings_sync_hourly">Every hour</string>
    <string name="settings_sync_daily">Every day</string>
    <string name="conversations_none">No conversations.\r\nTo add one press \'+\'.</string>
    <string name="conversations_title">Conversations</string>
    <string name="conversations_participants">"Participants: "</string>
    <string name="conversation_title">Conversation</string>
    <string name="conversation_send">Send</string>
    <string name="conversation_add_participant">Add participant</string>
    <string name="conversation_empty_content_not_allowed">Empty content not allowed!</string>
    <string name="dashboard_menu_sync_now">Sync now</string>
    <string name="plugins_title">Social Plugins</string>
    <string name="dashboard_tab_people">People</string>
    <string name="dashboard_tab_groups">Groups</string>
    <string name="dashboard_tab_events">Events</string>
    <string name="dashboard_tab_messages">Messages</string>
    <string name="dashboard_not_implemented">Not implemented!</string>
    <string name="dashboard_profile">Profile</string>
    <string name="dashboard_dashboard">Dashboard</string>
    <string name="dashboard_signout">Sign-out</string>
    <string name="dashboard_error">Not implemented or unknown error.</string>
    <string name="people_title">People</string>
    <string name="people_no_friends">No friends.\r\nTo add one press \'+\'.</string>
    <string name="people_person_n_a">N/A</string>
    <string name="people_no_zing">You need ZXing Barcode Scanner for QR functionality.</string>
    <string name="people_add">Add</string>
    <string name="people_qr">QR</string>
    <string name="groups_title">Groups</string>
    <string name="events_title">Events</string>
    <string name="person_title">Person profile</string>
    <string name="person_add_dialog_text">Type in the id of your friend or scan his QR if the person is present.</string>
    <string name="person_add_scan_qr">Scan QR</string>
    <string name="person_add">Add</string>
    <string name="login_inria_logging_in">Connecting…</string>
    <string name="login_inria_login_error">Login error. Check Internet and Password!</string>
    <string name="person_email_hint">enter your e-mail</string>
    <string name="person_save">Save</string>
    <string name="person_location">Location</string>
    <string name="person_contact_info">Profile information</string>
    <string name="person_email">E-mail</string>
    <string name="person_pick">Pick</string>
    <string name="person_profile_id">"Person ID: %s"</string>
    <string name="person_update">Update</string>
    <string name="person_update_success">Update request successfully sent.</string>
    <string name="person_update_error">You need Internet on both peers to work.</string>
    <string name="person_add_title">Add friend</string>
    <string name="people_hello_error">You need Internet on both peers to work.</string>
    <string name="people_hello_ok">Hello request successfully sent.</string>
    <string name="person_add_friend">Add friend</string>
    <string name="person_send_message">Send message</string>
    <string name="feedback_content">your valuable feedback</string>
    <string name="feedback_cancel">Cancel</string>
    <string name="feedback_send">Send</string>
    <string name="feedback_content_empty">Empty content not allowed.</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_app_nice">Keep up the good work!</string>
    <string name="feedback_app_slow">The app is slow!</string>
    <string name="feedback_app_bug">The app is buggy!</string>
    <string name="feedback_sent_ok">Thank you for the feedback!</string>
    <string name="feedback_sent_error">You need Internet to send feedback!</string>
    <string name="login_authenticate_cas">CAS Login</string>
    <string name="login_or">OR</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_authenticate">Authenticate</string>
    <string name="login_empty_fields">Username and password should not be empty!</string>
    <string name="login_wait_logging">Please wait while you are being logged in…</string>
    <string name="main_no_internet">You are out of connnexion. Click retry when you have Internet.</string>
    <string name="main_retry">Retry</string>
    <string name="main_logout">Log-out</string>
    <string name="main_logout_are_you_sure">You are about to disconnect from the application. Are you sure you want to do this?</string>
    <string name="main_logout_confirm">Confirm</string>
    <string name="main_logout_ok">Yes</string>
    <string name="main_logout_cancel">Cancel</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="main_no_activity">No activity.</string>
    <string name="main_no_article">No article.</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="main_river_wire">wire</string>
    <string name="main_river_cant_display_object"><![CDATA[Can not display the selected object:<br /><br /><b>Title:</b> %1$s<br /><b>Type:</b> %2$s]]></string>
    <string name="profile_save">Save</string>
    <string name="profile_basic_info">Basic information</string>
    <string name="profile_name_hint">display name</string>
    <string name="profile_email_hint">e-mail</string>
    <string name="profile_website_hint">website</string>
    <string name="profile_update_successfull">Profile was updated successfully!</string>
    <string name="post_title">Post</string>
    <string name="post_information">Post information</string>
    <string name="post_comments">Post comments</string>
    <string name="post_time_na">Time: N/A</string>
    <string name="post_add_comment">Add comment</string>
    <string name="post_no_comment">No comment. To add one press \'+\'.</string>
    <string name="group_information">Group information</string>
    <string name="group_name">Name: %s</string>
    <string name="group_members">Members: %d</string>
    <string name="group_owner">Owner: %s</string>
    <string name="group_posts">Blog</string>
    <string name="group_activity">Activity</string>
    <string name="profile_title">Profile</string>
    <string name="profile_team">Location: %s</string>
    <string name="profile_room">Room: %s</string>
    <string name="profile_phone">Phone: %s</string>
    <string name="profile_compose">Compose</string>
    <string name="profile_add_friend">Add friend</string>
    <string name="profile_add_ok">Friend request sent successfully!</string>
    <string name="profile_add_confirm">Confirm</string>
    <string name="profile_add_yes">OK</string>
    <string name="profile_add_cancel">Cancel</string>
    <string name="profile_add_confirm_text">Are you sure you want to add %s as a friend?</string>
    <string name="message_title">Message</string>
    <string name="message_send">Send</string>
    <string name="message_reply">Reply</string>
    <string name="message_message_details">Message details</string>
    <string name="message_subject_hint">message subject</string>
    <string name="message_content_hint">message content</string>
    <string name="message_to">To:</string>
    <string name="message_from">From:</string>
    <string name="message_sent_ok">Message sent successfully!</string>
    <string name="message_remove_title">Confirm delete</string>
    <string name="message_remove_message">Are you sure you want to remove this message?</string>
    <string name="message_remove_cancel">Cancel</string>
    <string name="message_remove_yes">Remove</string>
    <string name="message_empty_content_not_allowed">Fill all the fields and try again.</string>
</resources>