<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/ActivityTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:singleLine="false"
        android:text="@string/settings_refresh_interval" />

    <LinearLayout
        style="@style/AppContainer"
        android:layout_marginTop="-6dp"
        android:background="@drawable/content_card"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            style="@style/ActivitySubtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/settings_refresh_interval_info" />

        <RadioGroup
            android:id="@+id/refreshInterval"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/sync_manual"
                style="@style/ActivityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_sync_manual" />

            <RadioButton
                android:id="@+id/sync_hourly"
                style="@style/ActivityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_sync_hourly" />

            <RadioButton
                android:id="@+id/sync_daily"
                style="@style/ActivityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_sync_daily" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>