<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/profileid"
            style="@style/ActivityTitle"
            android:layout_marginTop="10dp"
            android:text="@string/person_contact_info" />

        <LinearLayout
            style="@style/AppContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:background="@drawable/content_card"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/person_location" />

                <fr.inria.arles.yarta.android.library.util.NoDefaultSpinner
                    android:id="@+id/location"
                    android:layout_width="fill_parent"
                    android:layout_height="36dp"
                    android:prompt="@string/person_pick" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/person_email" />

                <EditText
                    android:id="@+id/email"
                    style="@style/AppText"
                    android:layout_width="fill_parent"
                    android:hint="@string/person_email_hint"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/AppContainer"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                style="@style/AppCarrotButton"
                android:layout_width="0sp"
                android:layout_height="32dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:onClick="onClickAddFriend"
                android:padding="0dp"
                android:text="@string/person_add_friend" />

            <Button
                style="@style/AppCarrotButton"
                android:layout_width="0sp"
                android:layout_height="32dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:onClick="onClickSendMessage"
                android:padding="0sp"
                android:text="@string/person_send_message" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>