<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="250dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/person_add_dialog_text" />

        <AutoCompleteTextView
            android:id="@+id/nickName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel"
                style="@style/AppGrayButton"
                android:layout_width="0sp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/person_add_scan_qr" />

            <Button
                android:id="@+id/set"
                style="@style/AppCarrotButton"
                android:layout_width="0sp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:text="@string/person_add" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
