<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/nonet_frame"
            style="@style/AppContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:visibility="gone" >

            <Button
                android:id="@+id/retry"
                style="@style/AppCarrotButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/retry_text"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/retry_text"
                android:onClick="onClickRetry"
                android:text="@string/main_retry" />

            <TextView
                android:id="@+id/retry_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/retry"
                android:text="@string/main_no_internet" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/content_frame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/AppContainer"
                android:layout_marginTop="10dp"
                android:background="@drawable/card"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/titlecard"
                    android:padding="5dp"
                    android:text="@string/group_information"
                    android:textColor="#33334b" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp" >

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_centerVertical="true" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/icon"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/members"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/owner"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <TabHost
                android:id="@android:id/tabhost"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <LinearLayout
                    android:id="@+id/LinearLayout01"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <TabWidget
                        android:id="@android:id/tabs"
                        style="@style/AppContainer" >
                    </TabWidget>

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <FrameLayout
                            android:id="@+id/container"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </FrameLayout>
                </LinearLayout>
            </TabHost>
        </LinearLayout>
    </LinearLayout>

</ScrollView>